<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toEndOf="@id/detailName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/medicaments" />

    <TextView
        android:id="@+id/shortDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/detailDescription"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toEndOf="@+id/detailAtc"
        app:layout_constraintTop_toBottomOf="@+id/detailName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol"
        app:layout_constraintBottom_toTopOf="@+id/shortDescription"
        app:layout_constraintEnd_toStartOf="@+id/detailDescription"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toEndOf="@+id/detailAtc"
        app:layout_constraintTop_toBottomOf="@id/detailName"
        app:layout_constraintVertical_bias="0.363" />

    <TextView
        android:id="@+id/detailAtc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/detailName" />

    <TextView
        android:id="@+id/detailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/treciApi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shortDescription" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/treciApi"
        app:layout_constraintVertical_bias="0.032">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="Aktivna supstanca"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <androidx.cardview.widget.CardView
                android:id="@+id/one"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textAlignment="center"
                app:cardCornerRadius="2dp"
                app:contentPadding="10dp">

                <TextView
                    android:id="@+id/activSubstance"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_below="@+id/card_view1"
                    android:layout_alignLeft="@+id/card_view1"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:background="@color/purple_500"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activat2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="Omjer aktivne supstance"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view2"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textAlignment="center"
                app:cardCornerRadius="2dp"
                app:contentPadding="10dp">

                <TextView
                    android:id="@+id/ratioActiveSub"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_below="@+id/card_view1"
                    android:layout_alignLeft="@+id/card_view1"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:background="@color/purple_200"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activat3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="Preporucena dnevna doza"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view3"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textAlignment="center"
                app:cardCornerRadius="2dp"
                app:contentPadding="10dp">

                <TextView
                    android:id="@+id/recomDose"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/card_view2"
                    android:layout_alignLeft="@+id/card_view2"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:background="@color/teal_700"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.062">

        <TextView
            android:id="@+id/longDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="1.0"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.054" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
